--- a/security.html
+++ b/security.html
@@ -39,8 +39,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/xylem/job/oSKBafw7'>Xylem Careers - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432100--permanent-job-application-security-engineer-with-java-j2ee-accept-visa-candidates'>Bey (Permanent Job) Application Security Engineer with JAVA / J2EE - Accept Visa Candidates | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/xylem/job/oSKBafw7'>Xylem Careers - Application Security Engineer</a></h5> 
+<p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=ngOAWLwQ'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
@@ -160,7 +164,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/forescout/job/o81jafwm'>Forescout Technologies Inc. Careers - Security Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/forescout/job/o81jafwm'>Forescout Technologies Inc. Careers - Security Research Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -194,7 +198,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 performance of research-related tasks, including data collection, manipulation 
 and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -228,7 +232,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/266848-senior-security-engineer'>Job @ Sygnum (Z?rich): Senior Security Engineer | JOIN</a></h5> 
+<h5><a href='https://sygnum.join.com/jobs/266848-senior-security-engineer'>Job @ Sygnum (Z?rich): Senior Security Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Sygnum has a job opening for Senior Security Engineer in Z?rich (published: 
 23.08.2018). Apply now or check the other available jobs.</p>
@@ -334,7 +338,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/0DF63DE72F'>QuintoAndar - Jobs: Information Security Analyst - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/0DF63DE72F'>QuintoAndar - Jobs: Information Security Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Information Security Analyst at QuintoAndar.</p>
 <hr/>
@@ -346,7 +350,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
+<h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -386,7 +390,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -446,17 +450,13 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/j83xm57p8kop534ieu5riutn6c'>Security Architect  | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/j83xm57p8kop534ieu5riutn6c'>Security Architect  | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4041125002?gh_src=b9e24da22'>Job Application for Senior Security Architect at Anaplan</a></h5> 
-<p><span class="badge badge-light">San Francisco, United States</span></p>
-<p>Posted on:: 2019-07-23</p>
 <hr/>
 
 
