--- a/devops.html
+++ b/devops.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/alpha/384e6f7f-f959-47c4-85b1-2c8d5db9770c'>Telef?nica Alpha - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432226--remote-job-senior-aws-devops-engineer-terraform-need-candidates-on-w2'>Bey (Remote Job) Senior AWS DevOps Engineer (Terraform) - Need candidates on W2 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/alpha/384e6f7f-f959-47c4-85b1-2c8d5db9770c'>Telef?nica Alpha - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/loandepot/job/otBqafwo'>loanDepot Careers - Principal DevOps Engineer</a></h5> 
@@ -151,7 +155,7 @@ Services Team responsible for engineering, enhancing and transforming our?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/zetaglobal/job/ou9Dafwa'>Zeta Global Careers - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/zetaglobal/job/ou9Dafwa'>Zeta Global Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... Fortune 1000 and Middle Market brands acquire, retain and grow customer 
 relationships through actionable data, advanced analytics and machine learning.</p>
@@ -164,7 +168,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of DevOps Engineer at Skylight.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://everledger.workable.com/j/54F81B3355'>DevOps Engineer - Apply online - Everledger - Jobs</a></h5> 
+<h5><a href='https://everledger.workable.com/j/54F81B3355'>DevOps Engineer - Apply online - Everledger - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of DevOps Engineer at Everledger.</p>
 <hr/>
@@ -192,7 +196,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BestWesternHotelsResorts/743999692136535-senior-it-engineer-devops'>Best Western Hotels & Resorts Senior IT Engineer - DevOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BestWesternHotelsResorts/743999692136535-senior-it-engineer-devops'>Best Western Hotels & Resorts Senior IT Engineer - DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -226,7 +230,7 @@ excited by our goal of infrastructure as code to work closely with our product a
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/272109-devops-programmer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/272109-devops-programmer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -240,7 +244,7 @@ Additional?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
+<h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -273,12 +277,12 @@ be working as part of a team based in Leeds and help build the infrastructure?..
 <p><span class="badge badge-light">Boston Bangalore Boston</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/1B31D22CA4'>DevOps and AWS Infrastructure Engineer - Apply ... - Thematic - Jobs</a></h5> 
+<h5><a href='https://thematic.workable.com/j/1B31D22CA4'>DevOps and AWS Infrastructure Engineer - Apply ... - Thematic - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Alyona has a PhD in NLP and Machine Learning with an international reputation, 
 and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ehealth/job/onQCafwJ'>eHealth Careers - Manager, DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ehealth/job/onQCafwJ'>eHealth Careers - Manager, DevOps</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -290,11 +294,11 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TMSLLC/743999692383207-devops-engineer'>TMS LLC DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TMSLLC/743999692383207-devops-engineer'>TMS LLC DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -312,7 +316,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Jedi / Devops Engineer at Drover.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fetchr.workable.com/jobs/1080353'>DevOps Engineer - Apply online - Fetchr - Jobs</a></h5> 
+<h5><a href='https://fetchr.workable.com/jobs/1080353'>DevOps Engineer - Apply online - Fetchr - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
@@ -461,10 +465,6 @@ term?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sumup/jobs/4346452002'>Job Application for DevOps Engineer at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/nymedia/71f5227e-5ee8-4a49-839b-ebb38d8fc713'>New York Media - DevOps Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
